compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/MultiplatformCommonFacade.descriptors.java
public final class MyFacadeKt /* mypack.MyFacadeKt*/ {
  @org.jetbrains.annotations.NotNull()
  public static final mypack.MyJvmClass getCommonVariable1();//  getCommonVariable1()

  @org.jetbrains.annotations.NotNull()
  public static final mypack.MyJvmClass getCommonVariable2();//  getCommonVariable2()

  @org.jetbrains.annotations.NotNull()
  public static final mypack.MyJvmClass getCommonVariableWithActualization();//  getCommonVariableWithActualization()

  @org.jetbrains.annotations.NotNull()
  public static final mypack.MyJvmClass getIntermediateVariable1();//  getIntermediateVariable1()

  @org.jetbrains.annotations.NotNull()
  public static final mypack.MyJvmClass getIntermediateVariable2();//  getIntermediateVariable2()

  @org.jetbrains.annotations.NotNull()
  public static final mypack.MyJvmClass getIntermediateVariableWithActualization();//  getIntermediateVariableWithActualization()

  @org.jetbrains.annotations.NotNull()
  public static final mypack.MyJvmClass getJvmVariable1();//  getJvmVariable1()

  @org.jetbrains.annotations.NotNull()
  public static final mypack.MyJvmClass getJvmVariable2();//  getJvmVariable2()

  public static final void commonFunction1(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass);//  commonFunction1(mypack.MyJvmClass, mypack.MyCommonClass)

  public static final void commonFunction2(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass);//  commonFunction2(mypack.MyJvmClass, mypack.MyCommonClass)

  public static final void commonFunctionWithActualization(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass);//  commonFunctionWithActualization(mypack.MyJvmClass, mypack.MyJvmClass, mypack.MyCommonClass, mypack.MyIntermediateClass)

  public static final void intermediateFunction1(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass);//  intermediateFunction1(mypack.MyJvmClass, mypack.MyJvmClass, mypack.MyCommonClass, mypack.MyIntermediateClass)

  public static final void intermediateFunction2(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass);//  intermediateFunction2(mypack.MyJvmClass, mypack.MyJvmClass, mypack.MyCommonClass, mypack.MyIntermediateClass)

  public static final void intermediateFunctionWithActualization(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass);//  intermediateFunctionWithActualization(mypack.MyJvmClass, mypack.MyJvmClass, mypack.MyCommonClass, mypack.MyIntermediateClass)

  public static final void jvmFunction1(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  jvmFunction1(mypack.MyJvmClass, mypack.MyJvmClass, mypack.MyCommonClass, mypack.MyIntermediateClass, mypack.MyJvmClass)

  public static final void jvmFunction2(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass, @org.jetbrains.annotations.NotNull() mypack.MyCommonClass, @org.jetbrains.annotations.NotNull() mypack.MyIntermediateClass, @org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  jvmFunction2(mypack.MyJvmClass, mypack.MyJvmClass, mypack.MyCommonClass, mypack.MyIntermediateClass, mypack.MyJvmClass)

  public static final void setCommonVariable1(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setCommonVariable1(mypack.MyJvmClass)

  public static final void setCommonVariable2(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setCommonVariable2(mypack.MyJvmClass)

  public static final void setCommonVariableWithActualization(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setCommonVariableWithActualization(mypack.MyJvmClass)

  public static final void setIntermediateVariable1(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setIntermediateVariable1(mypack.MyJvmClass)

  public static final void setIntermediateVariable2(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setIntermediateVariable2(mypack.MyJvmClass)

  public static final void setIntermediateVariableWithActualization(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setIntermediateVariableWithActualization(mypack.MyJvmClass)

  public static final void setJvmVariable1(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setJvmVariable1(mypack.MyJvmClass)

  public static final void setJvmVariable2(@org.jetbrains.annotations.NotNull() mypack.MyJvmClass);//  setJvmVariable2(mypack.MyJvmClass)
}